# TrackingToolBox

./: .gitignore  CMakeLists.txt  Demo.cpp  ForeSight.sublime-workspace  FrameProcessor.cpp  README.md  VideoCapture.h  db.sqlite3  manage.py
AlgorithmTest/: CMakeLists.txt  main.cpp
AlgorithmTest/conf/: configure.json
AlgorithmTest/source/retrieve/: ImageRetrieveRpc.ice
AlgorithmTest/source/utils/: utiltest.cpp  utiltest.h
BEWiS/: CMakeLists.txt  README.md  bewis.bak.cpp  bewis.cpp  bewis.hpp
BEWiS/wisardlib/: bgwis.cpp  bgwis.hpp  wisard.cpp  wisard.hpp  wnet_lib.cpp  wnet_lib.hpp
DesignPatterns/: CMakeLists.txt  Desktop DB  Desktop DF  readme.txt
DesignPatterns/include/: AntiThetic.h  Arrays.h  BSCallClass.h  BSCallTwo.h  BinomialTree.h  Bisection.h  BlackScholesFormulas.h  ConvergenceTable.h  DoubleDigital.h  DoubleDigital2.h  ExoticBSEngine.h  ExoticEngine.h  MCStatistics.h  NewtonRaphson.h  Normals.h  Parameters.h  ParkMiller.h  PathDependent.h  PathDependentAsian.h  PayOff1.h  PayOff2.h  PayOff3.h  PayOffBridge.h  PayOffConstructible.h  PayOffFactory.h  PayOffForward.h  Random1.h  Random2.h  Random3.h  SimpleMC.h  SimpleMC2.h  SimpleMC3.h  SimpleMC4.h  SimpleMC5.h  SimpleMC6.h  SimpleMC7.h  SimpleMC8.h  TreeAmerican.h  TreeEuropean.h  TreeProducts.h  (+5 more)
DesignPatterns/mains/: EquityFXMain.cpp  PayFactoryMain.cpp  RandomMain1.cpp  RandomMain2.cpp  RandomMain3.cpp  SimpleMCMain1.cpp  SimpleMCMain2.cpp  SimpleMCMain3.cpp  SimpleMCMain4.cpp  SimpleMCMain5.cpp  SolveMain1.cpp  SolveMain2.cpp  StatsMain1.cpp  StatsMain2.cpp  TreeMain.cpp  VanillaMain1.cpp  VanillaMain2.cpp  VanillaMain3.cpp  VanillaMain4.cpp
DesignPatterns/source/: AntiThetic.cpp  Arrays.cpp  BSCallClass.cpp  BSCallTwo.cpp  BinomialTree.cpp  BlackScholesFormulas.cpp  ConvergenceTable.cpp  DoubleDigital.cpp  DoubleDigital2.cpp  ExoticBSEngine.cpp  ExoticEngine.cpp  MCStatistics.cpp  Normals.cpp  Parameters.cpp  ParkMiller.cpp  PathDependent.cpp  PathDependentAsian.cpp  PayOff1.cpp  PayOff2.cpp  PayOff3.cpp  PayOffBridge.cpp  PayOffFactory.cpp  PayOffForward.cpp  PayOffRegistration.cpp  Random1.cpp  Random2.cpp  Random3.cpp  SimpleMC.cpp  SimpleMC2.cpp  SimpleMC3.cpp  SimpleMC4.cpp  SimpleMC5.cpp  SimpleMC6.cpp  SimpleMC7.cpp  SimpleMC8.cpp  TreeAmerican.cpp  TreeEuropean.cpp  TreeProducts.cpp  Vanilla1.cpp  Vanilla2.cpp  (+1 more)
ForeSight/: settings.py  urls.py  wsgi.py
ForeSightStock/: settings.py  urls.py  wsgi.py
ManageMent/: apps.py  models.py  urls.py  utils.py  views.py
ManageMent/migrations/: 0001_initial.py  0002_myuser.py
RemoteTracking/: CMakeLists.txt
RemoteTracking/source/: main-opencv.cpp
RemoteTracking/source/tracking/: camshift.cpp  kalman_opencv.cpp  lkflow.cpp  main.cpp
RemoteTracking/source/vibe/: vibe-background-sequential.c  vibe-background-sequential.h  your-main-file-sequential.c
bgslibrary/: Demo2.cpp  FrameProcessor.h  Main.cpp  PreProcessor.cpp  PreProcessor.h  VideoAnalysis.cpp  VideoCapture.cpp
bgslibrary/config/: FrameProcessor.xml
bgslibrary/package_analysis/: ForegroundMaskAnalysis.cpp
bgslibrary/package_bgs/: AdaptiveBackgroundLearning.cpp  AdaptiveSelectiveBackgroundLearning.cpp  MixtureOfGaussianV1BGS.h  WeightedMovingMeanBGS.cpp
bgslibrary/package_bgs/av/: VuMeter.cpp
bgslibrary/package_bgs/dp/: DPAdaptiveMedianBGS.cpp  DPEigenbackgroundBGS.cpp  DPGrimsonGMMBGS.cpp  DPMeanBGS.cpp  DPPratiMediodBGS.cpp  DPTextureBGS.cpp
bgslibrary/package_bgs/lb/: LBAdaptiveSOM.cpp  LBMixtureOfGaussians.cpp
package_analysis/: ForegroundMaskAnalysis.h
package_bgs/: FrameDifferenceBGS.cpp  MixtureOfGaussianV1BGS.cpp  MixtureOfGaussianV2BGS.cpp  MixtureOfGaussianV2BGS.h  StaticFrameDifferenceBGS.cpp  WeightedMovingVarianceBGS.cpp
package_bgs/dp/: DPWrenGABGS.cpp  DPZivkovicAGMMBGS.cpp
package_bgs/lb/: LBFuzzyAdaptiveSOM.cpp  LBFuzzyGaussian.cpp  LBSimpleGaussian.cpp
package_bgs/sjn/: SJN_MultiCueBGS.cpp
templates/management/: base.html  index.html  upload_images.html  upload_videos.html  view_images_list.html  view_videos_list.html
www/: ForeSight.sublime-workspace  base.html  image_detail.html  signup.html  view_images_list.html
www/css/: base.css
